# tictactoe

./: .cavoke_config  .gitignore  .gitmodules  README.md  _config.yml  create-client-zip.sh  my_cavoke_game_config.json
.github/workflows/: verify-cavoke-game.yml
client/: app.qml
server/: CMakeLists.txt  Dockerfile  my_cavoke_game.cpp
